--- a/Index.html
+++ b/Index.html
@@ -132,7 +132,7 @@
                     <div class="layer">
                         <h3>Portfolio Website</h3>
                         <p>My online working space to showcase my skills and connect with people all over the world. </p>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
+                        <a href="https//commerce-website-w124.vercel.app"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
@@ -142,7 +142,7 @@
                         <h3>EDA NEtflix</h3>
                         <p>Analyzing and manipulation
                             of the netflix kaggle data. </p>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
+                        <a href="https://github.com/divine442/Exploratory-data-analysis-for-netflix-"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
@@ -152,7 +152,7 @@
                         <h3>E-commerce Site</h3>
                         
                         <p> A REACT Front-End shopping website.</p>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
+                        <a href="https://commerce-website-beige.vercel.app/"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                  <div class="Project">
@@ -160,7 +160,7 @@
                     <div class="layer">
                         <h3>Todo App</h3>
                         <p> React Todo app that allows user add,edit,mark and delete task. </p>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
+                        <a href="mytodo-iota-two.vercel.app"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
@@ -168,7 +168,7 @@
                     <div class="layer">
                         <h3>Tic Tac Toe</h3>
                         <p> A simple tic tac toe game using HTML, CSS and Javascript </p>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
+                        <a href="https://divine442.github.io/tic-tac/"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
@@ -176,7 +176,7 @@
                     <div class="layer">
                         <h3>Calculator App</h3>
                         <p> A simple calculator using HTML, CSS and Javascript </p>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
+                        <a href="https://divine442.github.io/Simple-calculator/"><i class="fa-brands fa-github"></i></a>
                     </div> 
                 </div>
             </div>
