--- a/Index.html
+++ b/Index.html
@@ -132,7 +132,7 @@
                     <div class="layer">
                         <h3>Portfolio Website</h3>
                         <p>My online working space to showcase my skills and connect with people all over the world. </p>
-                        <a href="https//commerce-website-w124.vercel.app"><i class="fa-brands fa-github"></i></a>
+                        <a href=""><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
