--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     </div>
                 </div>
                 <div class="Project">
-                    <img src="images/Project-5.png" alt="">
+                    <img src="images/Project-5.jpg" alt="">
                     <div class="layer">
                         <h3>Tic Tac Toe</h3>
                         <p> A simple tic tac toe game using HTML, CSS and Javascript </p>
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="Project">
-                    <img src="images/Project-5.png" alt="">
+                    <img src="images/Project-6.png" alt="">
                     <div class="layer">
                         <h3>Calculator App</h3>
                         <p> A simple calculator using HTML, CSS and Javascript </p>
