--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
-    <link rel="stylesheet" href="Style.css" type="text/css">
+    <link rel="stylesheet" href="port.css" type="text/css">
     <script src="https://kit.fontawesome.com/5bd03fa86c.js" crossorigin="anonymous"></script>
 </head>
 <body>
