--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
                 </div>
                 <div class="col-2">
                     <h1 class="sub">About Me</h1>
-                    <p>After completing my bachelor's degree in Afebabalola University, i worked with the Nigerian national institute of information technology(NIIT) on interestin projects spanning from data analysis and Front end web development. 
+                    <p>After completing my Bsc in Afebabalola University, i worked with the Nigerian national institute of information technology(NIIT) on projects spanning from data analysis and Front-end apps. 
                         <br>
                         <br>
-                       After 9 months of learning and worrking with different teams at NIIT to deliver specialized products using Javascript,Python,REACT and Microsoft power bi, i joined the technology providers -Galaxy Backbone as a network security intern to monitor and run scans to observe the 
+                       After learning and working with different teams at NIIT to deliver specialized products using web developmet tools and Python, i joined the technology providers -Galaxy Backbone workig aso network security to run scans and observe the 
                        threat levels of clients website. <br>
                 <br>
-                    I have thoroughly enjoyed growing my sills and practically deploying them in solving real life issues via technology and continuosly seek new challenges in the spcae. 
-                My superpower is optimisim so regardless of how daunting a task may present, i believe with the right amount of dedication and collaboration it can get sorted. </p>
+                    I have thoroughly enjoyed polishing my skills and employed them in solving real life issues. My superpower is optimisim so regardless of how daunting a task may present, i believe with the right amount of dedication and collaboration it can get sorted. </p>
 
                 <div class="tab-titles">
                         <p class="links underline-links" onclick="opentab('skills')">Skills</p>
