--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="layer">
                         <h3>Portfolio Website</h3>
                         <p>My online working space to showcase my skills and connect with people all over the world. </p>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
+                        <a href=" https://divine442.github.io/Portfolio-Website/#services/"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
@@ -141,7 +141,7 @@
                         <h3>EDA NEtflix</h3>
                         <p>Analyzing and manipulation
                             of the netflix kaggle data. </p>
-                        <a href="https://github.com/divine442/Exploratory-data-analysis-for-netflix-"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://github.com/divine442/Exploratory-data-analysis-for-netflix-" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
@@ -151,7 +151,7 @@
                         <h3>E-commerce Site</h3>
                         
                         <p> A REACT Front-End shopping website.</p>
-                        <a href="https://commerce-website-beige.vercel.app/"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://commerce-website-beige.vercel.app/" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                  <div class="Project">
@@ -159,7 +159,7 @@
                     <div class="layer">
                         <h3>Todo App</h3>
                         <p> React Todo app that allows user add,edit,mark and delete task. </p>
-                        <a href="mytodo-iota-two.vercel.app"><i class="fa-brands fa-github"></i></a>
+                        <a href="mytodo-iota-two.vercel.app" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
