--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="layer">
                         <h3>Portfolio Website</h3>
                         <p>My online working space to showcase my skills and connect with people all over the world. </p>
-                        <a href=" https://divine442.github.io/Portfolio-Website/#services/"><i class="fa-brands fa-github"></i></a>
+                        <a href=" https://divine442.github.io/Portfolio-Website/"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
@@ -159,7 +159,7 @@
                     <div class="layer">
                         <h3>Todo App</h3>
                         <p> React Todo app that allows user add,edit,mark and delete task. </p>
-                        <a href="mytodo-iota-two.vercel.app" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://mytodo-iota-two.vercel.app/" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
