--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h1>Hello!</h1>
                     <h2>Ndubuisi Divine</h2>
                     <p></p>
-                    <h3>I'm a <span>Web developer and Data analyst.</span></h3>
+                    <h3>I'm a <span>Front-End developer and Data analyst.</span></h3>
                 </div>
 
                 <div class="hero">
