--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <h3>E-commerce Site</h3>
                         
                         <p> A REACT Front-End shopping website.</p>
-                        <a href="https://commerce-website-beige.vercel.app/" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://commerce-website-w124.vercel.app/" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                  <div class="Project">
