--- a/index.html
+++ b/index.html
@@ -162,8 +162,16 @@
                         <a href="https://mytodo-iota-two.vercel.app/" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
-                <div class="Project">
+                 <div class="Project">
                     <img src="images/Project-5.jpg" alt="">
+                    <div class="layer">
+                        <h3>Weather-App</h3>
+                        <p> An API project for finding weather conditions of different countries ad cities. </p>
+                        <a href="" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="Project">
+                    <img src="images/Project-6.jpg" alt="">
                     <div class="layer">
                         <h3>Tic Tac Toe</h3>
                         <p> A simple tic tac toe game using HTML, CSS and Javascript </p>
@@ -171,7 +179,7 @@
                     </div>
                 </div>
                 <div class="Project">
-                    <img src="images/Project-6.png" alt="">
+                    <img src="images/Project-7.png" alt="">
                     <div class="layer">
                         <h3>Calculator App</h3>
                         <p> A simple calculator using HTML, CSS and Javascript </p>
