--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="layer">
                         <h3>Weather-App</h3>
                         <p> An API project for finding weather conditions of different countries ad cities. </p>
-                        <a href="" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://divine442.github.io/Weather-App/" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="Project">
