--- a/index.html
+++ b/index.html
@@ -54,13 +54,24 @@
                 </div>
                 <div class="col-2">
                     <h1 class="sub">About Me</h1>
-                    <p>After completing my Bsc in Afebabalola University, i worked with the Nigerian national institute of information technology(NIIT) on projects spanning from data analysis and Front-end apps. 
-                        <br>
-                        <br>
-                       After learning and working with different teams at NIIT to deliver specialized products using web developmet tools and Python, i joined the technology providers -Galaxy Backbone workig aso network security to run scans and observe the 
-                       threat levels of clients website. <br>
-                <br>
-                    I have thoroughly enjoyed polishing my skills and employed them in solving real life issues. My superpower is optimisim so regardless of how daunting a task may present, i believe with the right amount of dedication and collaboration it can get sorted. </p>
+                    <p>I am a front-end developer that is enthusiastic about creating user-friendly interfaces as well as,
+                        buildig responsive, interactive websites and applications.
+                        <br> <br>
+
+                        Here are some technologies I have been working with:
+                    </p>
+                        <ul class="tech-list" >
+                            <div class="tech">Python</div>
+                            <div class="tech">Javascript ES6</div>
+                            <div class="tech">Rstudio</div>
+                            <div class="tech">React</div>
+                            <div class="tech">Microsoft-BI</div>
+                        </ul> <br>
+
+                    <p>Outside of work, I volunteer to help get beginners started with coding,i also play lots of sports.</p>
+
+                
+                       
 
                 <div class="tab-titles">
                         <p class="links underline-links" onclick="opentab('skills')">Skills</p>
@@ -166,7 +177,7 @@
                     <img src="images/Project-5.jpg" alt="">
                     <div class="layer">
                         <h3>Weather-App</h3>
-                        <p> An API project for finding weather conditions of different countries ad cities. </p>
+                        <p> An API project for finding weather conditions of different countries and cities. </p>
                         <a href="https://divine442.github.io/Weather-App/" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
